# system_controller

./: .dockerignore  .gitignore  ADAPTER_POLICY_GUIDE.md  Dockerfile  README.md  demo_expanded_system.cpp  docker-compose.yml  fix_package_name.sh  run_local_simulation  run_local_simulation.cpp  run_tests.sh  test_core_classes.cpp  test_system.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/system_controller/: CMakeLists.txt  package.xml
src/system_controller/config/: missions.yaml  policies.yaml  vehicle_adapters.yaml
src/system_controller/include/: mission_type_base.hpp  payload_type_base.hpp  policy_base.hpp  vehicle_type_base.hpp
src/system_controller/include/adapters/: implement_adapter_base.hpp  mower_adapter.hpp  new_holland_adapter.hpp  polaris_adapter.hpp  seeder_adapter.hpp  sprayer_adapter.hpp  vehicle_adapter_base.hpp
src/system_controller/include/missions/: mission_base.hpp  mower_mission.hpp  seeder_mission.hpp  sprayer_mission.hpp
src/system_controller/include/policies/: adas_policy.hpp  policy_base_expanded.hpp  teleop_only_policy.hpp
src/system_controller/launch/: demo.launch.py  system_controller.launch.py
src/system_controller/msg/: ImplementCommand.msg  MissionStatus.msg  MowerCommand.msg  PolicyState.msg  SeederCommand.msg  SprayerCommand.msg  SystemCommand.msg  VehicleCommand.msg  VehicleStatus.msg
src/system_controller/src/: command_input_arbiter_node.cpp  mission_adapter_manager_node.cpp  mission_service_node.cpp  mission_type_base.cpp  payload_type_base.cpp  policy_base.cpp  system_manager_node.cpp  telemetry_collector_node.cpp  vehicle_adapter_manager_node.cpp  vehicle_type_base.cpp
src/system_controller/src/adapters/: mower_adapter.cpp  polaris_adapter.cpp  seeder_adapter.cpp  sprayer_adapter.cpp  vehicle_adapter_base.cpp
src/system_controller/src/missions/: mower_mission.cpp  seeder_mission.cpp  sprayer_mission.cpp
src/system_controller/src/policies/: adas_policy.cpp  teleop_only_policy.cpp
src/system_controller/srv/: ConfigureAdapter.srv  GetStatus.srv
src/system_controller/test/: test_core_classes.cpp  test_regression.cpp  test_ros2_integration.cpp
